--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
       <!-- 前景內容（標題 + 按鈕） -->
       <div class="hero__content">
         <h1 class="title">test123</h1>
-        <button class="enter-btn">進入</button>
+        <button
+          class="enter-btn"
+          onclick="window.open('https://sam-change.github.io/mein/index.html', '_blank', 'noopener,noreferrer')"
+        >
+          進入
+        </button>
       </div>
     </section>
   </body>
