--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- 👇 這裡放「滿版的背景圖」：把 src 換成你的圖片 URL -->
       <img
         class="hero__bg"
-        src="https://raw.githubusercontent.com/Sam-Change/JS_Dev/5e1161f9161c1896cfca1c67119710f1ad2b0eaf/imgTest04.png"
+        src="https://raw.githubusercontent.com/Sam-Change/JS_Dev/image/bg.png"
         alt="background"
       />
 
@@ -103,9 +103,9 @@
         <h1 class="title">test123</h1>
         <button
           class="enter-btn"
-          onclick="window.open('https://sam-change.github.io/mein/index.html', '_blank', 'noopener,noreferrer')"
+          onclick="window.open('https://www.yahoo.co.jp/', '_blank', 'noopener,noreferrer')"
         >
-          前往
+          進入
         </button>
       </div>
     </section>
