--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h1 class="title">test123</h1>
         <button
           class="enter-btn"
-          onclick="window.open('https://www.yahoo.co.jp/', '_blank', 'noopener,noreferrer')"
+          onclick="window.open('https://sam-change.github.io/mein/index', '_blank', 'noopener,noreferrer')"
         >
           進入
         </button>
