--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>測試頁面</title>
+    <title>メイン</title>
     <style>
       /* 頁面歸零，避免橫向卷軸 */
       * {
@@ -151,13 +151,7 @@
       <div class="hero__content">
         <!-- 上方 -->
         <header class="header-section">
-          <h1 class="title">test123</h1>
-          <button
-            class="enter-btn"
-            onclick="window.open('https://www.yahoo.co.jp/', '_blank', 'noopener,noreferrer')"
-          >
-            進入
-          </button>
+          <h1 class="title">メイン</h1>
         </header>
 
         <!-- 下方 -->
@@ -174,21 +168,21 @@
               class="menu-btn"
               onclick="window.open('https://www.yahoo.co.jp/', '_blank', 'noopener,noreferrer')"
             >
-              外開 Yahoo
+              外開Yahoo!JP
             </button>
 
             <button
               class="menu-btn"
-              onclick="window.location.href='JS_Dev/jsDev20250225.html';"
+              onclick="window.location.href='https://sam-change.github.io/JS_Dev/jsDev20250225.html';"
             >
-              前往 Page2
+              畫面換頁
             </button>
 
             <button
               class="menu-btn"
               onclick="window.open('https://sam-change.github.io/JS_Dev/jsDev20250225.html', '_blank', 'noopener,noreferrer')"
             >
-              外開 Google
+              外開網頁
             </button>
           </nav>
         </main>
