--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: rgba(0, 0, 0, 0.2); /* 半透明，無模糊 */
+        /*background: rgba(0, 0, 0, 0.2);  半透明，無模糊 */
         padding: 16px;
       }
 
